изменил Index.html  в самом github

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <span>Sapiente placeat consequatur omnis veritatis ratione consectetur quos? Amet nihil corporis fugiat adipisci esse magni rerum ullam quia molestiae ad doloribus beatae, ea unde aspernatur itaque quis! Officiis, impedit, sequi.</span>
     </p>
     <ul>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
+        <li><a href="#">Первый пункт</a></li>
+        <li><a href="#">Второй пункт</a></li>
+        <li><a href="#">Третий пункт</a></li>
     </ul>
 </body>
 </html>
